--- a/src/App.css
+++ b/src/App.css
@@ -333,8 +333,8 @@ font-weight: bold;
 .detail_table td{  
   white-space: nowrap;
   letter-spacing: 0;
-  opacity: 84%;
-  font-weight: 800;
+  color: rgba(0, 0, 0, 0.78);
+  font-weight: 600;
   font-size: 11px;
   padding: 15px;
   border-top: none;
@@ -353,8 +353,7 @@ font-weight: bold;
     vertical-align: top;
     font-size: 12px;
     letter-spacing: 0;
-    color: #000000;
-    opacity: 54%;
+    color: rgba(0, 0, 0, 0.5);    
     font-weight: 500;
 }
 .table-input{
