--- a/konnections-ui/src/App.css
+++ b/konnections-ui/src/App.css
@@ -156,7 +156,7 @@ select {
 .main_bock .main_container{  
   width: calc(100% - 200px);
   padding: 0 20px;
-  margin: auto;
+  margin: 0 auto;
 }
 
 .side_nav{
